Fixed menu to z-index 2 after arrows z-index 1

--- a/frontend/src/components/Navigation/Session/User/Menu/index.css
+++ b/frontend/src/components/Navigation/Session/User/Menu/index.css
@@ -16,6 +16,11 @@
     cursor: pointer;
 }
 
+#menu {
+    background-color: #ffffff;
+    z-index: 2;
+}
+
 #menu > .option:last-child {
     border-top: 0.12vw solid #ebebeb;
 }
